# cygwin

./: .appveyor.yml
.github/workflows/: cygwin.yml
newlib/libc/ctype/: isalnum_l.c
winsup/: acinclude.m4  aclocal.m4  ccwrap  configure  find_include
winsup/cygserver/: Makefile.in  aclocal.m4  configure  meson.build  meson_options.txt
winsup/cygwin/: Makefile.am  Makefile.in  configure  fhandler.h  fhandler_console.cc  mkvers.sh  nlsfuncs.cc
winsup/cygwin/include/cygwin/: wait.h
winsup/doc/: Makefile.am  Makefile.in
winsup/testsuite/: Makefile.am  Makefile.in
winsup/testsuite/cygrun/: Makefile.in
winsup/testsuite/winsup.api/: socketpair_full.c
winsup/utils/: Makefile.in  aclocal.m4  configure
winsup/utils/mingw/: Makefile.in
